--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
     "presets": [
-        "@babel/presset-env",
-        "@babel/presset-react"
+        "@babel/preset-env",
+        "@babel/preset-react"
     ]
 }
