--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-shop",
   "version": "1.0.0",
-  "description": "react eshop",
+  "description": "react shop",
   "main": "src/index.js",
   "scripts": {
     "start": "webpack serve --open",
@@ -16,8 +16,10 @@
   "license": "MIT",
   "dependencies": {
     "@babel/core": "^7.19.1",
+    "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-env": "^7.19.1",
     "@babel/preset-react": "^7.18.6",
+    "axios": "^1.2.2",
     "babel-loader": "^8.2.5",
     "html-loader": "^4.1.0",
     "html-webpack-plugin": "^5.5.0",
